Change the cmake project name from uorb_lib to uorb

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@
 ############################################################################
 cmake_minimum_required(VERSION 3.5)
 
-project(uorb_lib)
+project(uorb)
 
 set(CMAKE_CXX_STANDARD 11)
 
