Change the name of the cmake test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -55,4 +55,4 @@ link_libraries(uorb_unittests_msgs)
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} TEST_SOURCE)
 add_executable(unit_tests ${TEST_SOURCE})
 target_include_directories(unit_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-add_test(TARGET unit_tests)
+add_test(uorb_unit_test ${CMAKE_CURRENT_BINARY_DIR}/unit_tests)
