Set the public attributes of the header file in the cmake configuration 3 file changes in working directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,10 +73,11 @@ configure_file(
 )
 
 # uorb library
-include_directories(${CMAKE_CURRENT_SOURCE_DIR} include)
 aux_source_directory(src UORB_SOURCE)
 aux_source_directory(src/base UORB_SOURCE)
 add_library(uorb ${UORB_SOURCE} ${CMAKE_CURRENT_BINARY_DIR}/src/git_version.cc)
+target_include_directories(uorb PUBLIC include)
+target_include_directories(uorb PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 # install uorb
 install(TARGETS uorb
