--- a/examples/cpp_pub_sub/CMakeLists.txt
+++ b/examples/cpp_pub_sub/CMakeLists.txt
@@ -1,1 +1,2 @@
 add_executable(uorb_example_cpp_pub_sub cpp_pub_sub.cc)
+target_include_directories(uorb_example_cpp_pub_sub PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../)
