--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -40,7 +40,6 @@ endif ()
 
 # uorb
 link_libraries(uorb)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
 
 # pthread
 find_package(Threads REQUIRED)
@@ -54,5 +53,7 @@ link_libraries(uorb_unittests_msgs)
 # uorb test source
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} TEST_SOURCE)
 add_executable(unit_tests ${TEST_SOURCE})
+target_include_directories(unit_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..)
 target_include_directories(unit_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+
 add_test(uorb_unit_test ${CMAKE_CURRENT_BINARY_DIR}/unit_tests)
