Simplify the cmake script and reduce the number of cmake targets

--- a/examples/msg/CMakeLists.txt
+++ b/examples/msg/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(uorb_msg LANGUAGES NONE)
+project(uorb_examples_msgs LANGUAGES NONE)
 cmake_minimum_required(VERSION 3.5)
 
 # Support IN_LIST if() operator
@@ -49,7 +49,6 @@ add_custom_command(OUTPUT ${uorb_headers}
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         VERBATIM
         )
-add_custom_target(uorb_examples_target_msg_headers DEPENDS ${uorb_headers})
 
 # Generate uORB sources
 add_custom_command(OUTPUT ${uorb_sources}
@@ -70,8 +69,7 @@ add_custom_command(OUTPUT ${uorb_sources}
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         VERBATIM
         )
-add_custom_target(uorb_examples_target_msg_sources DEPENDS ${uorb_sources})
 
-add_library(uorb_examples_msgs ${uorb_sources})
-target_include_directories(uorb_examples_msgs PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-add_dependencies(uorb_examples_msgs uorb_examples_target_msg_headers)
+add_library(${PROJECT_NAME} ${uorb_sources} ${uorb_headers})
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(${PROJECT_NAME} PUBLIC uorb)
