topic_listener: Add simple tcp shell

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -16,3 +16,4 @@ include_directories(PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 # Examples
 add_subdirectory(c_pub_sub)
 add_subdirectory(cpp_pub_sub)
+add_subdirectory(tcp_topic_listener)
