--- a/examples/tcp_topic_listener/CMakeLists.txt
+++ b/examples/tcp_topic_listener/CMakeLists.txt
@@ -1,1 +1,4 @@
-add_executable(uorb_example_tcp_topic_listener tcp_topic_listener.cc)
+project(uorb_example_tcp_topic_listener)
+
+add_executable(${PROJECT_NAME} src/uorb_tcp_listener.cc tcp_topic_listener_test.cc)
+target_include_directories(${PROJECT_NAME} PUBLIC include)
