--- a/examples/tcp_topic_listener/CMakeLists.txt
+++ b/examples/tcp_topic_listener/CMakeLists.txt
@@ -1,4 +1,6 @@
 project(uorb_example_tcp_topic_listener)
 
-add_executable(${PROJECT_NAME} src/uorb_tcp_listener.cc tcp_topic_listener_test.cc)
-target_include_directories(${PROJECT_NAME} PUBLIC include)
+add_executable(${PROJECT_NAME} tcp_topic_listener_test.cc)
+target_link_libraries(${PROJECT_NAME} PRIVATE slog)
+target_link_libraries(${PROJECT_NAME} PRIVATE uorb_examples_msgs)
+target_link_libraries(${PROJECT_NAME} PRIVATE uorb_tcp_topic_listener_lib)
