--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,20 +12,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip --version
-        pip install -r ./tools/msg/tools/requirements.txt
-    - name: Build and run tests
-      run: |
-        mkdir -p build
-        cd build
-        cmake -DUORB_BUILD_TESTS=ON ..
-        make unit_tests
-        ./tests/unit_tests
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip --version
+          pip install -r ./tools/msg/tools/requirements.txt
+      - name: Build and run tests
+        run: |
+          mkdir -p build
+          cd build
+          cmake -DUORB_BUILD_TESTS=ON ..
+          make uorb_test
+          ./tests/uorb_test
