--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,31 +1,44 @@
-name: Tests
+name: CMake
 
 on:
   push:
-    branches:
-      - '*'
+    branches: [ "main" ]
   pull_request:
-    branches:
-      - '*'
+    branches: [ "main" ]
+
+env:
+  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
+  BUILD_TYPE: Release
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  test:
+    name: ${{ matrix.os }}.${{ matrix.compiler.name }}
+    # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
+    # You can convert this to a matrix build if you need cross-platform coverage.
+    # See: https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs#using-a-matrix-strategy
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+        compiler:
+          - { name: GNU,  CC: gcc,   CXX: g++,     GCOV: gcov }
+          - { name: LLVM, CC: clang, CXX: clang++ }
+    runs-on: ${{ matrix.os }}
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip --version
-          pip install -r ./tools/msg/tools/requirements.txt
-      - name: Build and run tests
-        run: |
-          mkdir -p build
-          cd build
-          cmake -DUORB_BUILD_TESTS=ON ..
-          make uorb_test
-          ./tests/uorb_test
+      - uses: actions/checkout@v3
+
+      - name: Configure CMake
+        # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
+        # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+        run: 'cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DUORB_BUILD_TESTS=ON
+        -DCMAKE_C_COMPILER=${{matrix.compiler.CC}} -DCMAKE_CXX_COMPILER=${{matrix.compiler.CXX}}'
+
+      - name: Build
+        # Build your program with the given configuration
+        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+
+      - name: Test
+        working-directory: ${{github.workspace}}/build
+        # Execute tests defined by the CMake configuration.
+        # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+        run: ctest -C ${{env.BUILD_TYPE}}
