--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,38 +1,17 @@
-project(uorb_test)
-
-# gtest
+# Google Test
 find_package(GTest)
-if (GTest_FOUND)
-    link_libraries(GTest::GTest GTest::Main)
-    include_directories(${PROJECT_SOURCE_DIR}/src ${GTEST_INCLUDE_DIRS})
-else ()
-    # Download and unpack googletest at configure time
-    configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
-    execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
-            RESULT_VARIABLE result
-            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download)
-    if (result)
-        message(FATAL_ERROR "CMake step for googletest failed: ${result}")
-    endif ()
-    execute_process(COMMAND ${CMAKE_COMMAND} --build .
-            RESULT_VARIABLE result
-            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download)
-    if (result)
-        message(FATAL_ERROR "Build step for googletest failed: ${result}")
-    endif ()
-
-    # Prevent overriding the parent project's compiler/linker
-    # settings on Windows
+if (NOT GTest_FOUND)
+    include(FetchContent)
+    FetchContent_Declare(
+            googletest
+            URL https://github.com/google/googletest/archive/refs/tags/v1.13.0.zip
+    )
+    # For Windows: Prevent overriding the parent project's compiler/linker settings
     set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-
-    # Add googletest directly to our build. This defines
-    # the gtest and gtest_main targets.
-    add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
-            ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
-            EXCLUDE_FROM_ALL)
-
-    link_libraries(gtest gtest_main)
+    FetchContent_MakeAvailable(googletest)
 endif ()
+
+project(uorb_test)
 
 # pthread
 find_package(Threads REQUIRED)
@@ -44,7 +23,8 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/msg)
 # uorb test source
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} TEST_SOURCE)
 add_executable(${PROJECT_NAME} ${TEST_SOURCE})
+target_link_libraries(${PROJECT_NAME} PRIVATE GTest::gtest_main)
 target_link_libraries(${PROJECT_NAME} PRIVATE uorb_unittests_msgs)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
 
-add_test(${PROJECT_NAME} ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME})
+add_test(${PROJECT_NAME} ${PROJECT_NAME})
