Add event loop class to simplify monitoring + callback code

--- a/examples/cpp_pub_sub/CMakeLists.txt
+++ b/examples/cpp_pub_sub/CMakeLists.txt
@@ -7,3 +7,8 @@ target_link_libraries(${PROJECT_NAME} PRIVATE uorb_examples_msgs)
 # pthread
 find_package(Threads REQUIRED)
 target_link_libraries(${PROJECT_NAME} PRIVATE Threads::Threads)
+
+add_executable(cpp_pub_sub_event_poll cpp_pub_sub_event_poll.cc)
+target_link_libraries(cpp_pub_sub_event_poll PRIVATE slog)
+target_link_libraries(cpp_pub_sub_event_poll PRIVATE uorb_examples_msgs)
+target_link_libraries(cpp_pub_sub_event_poll PRIVATE Threads::Threads)
